--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body {
 font-family: "Gill Sans", sans-serif;
 }
+
+.box {
+  margin: 30px;
+  width: 100px;
+  height: 100px;
+  background-color: rebeccapurple;
+  transform: rotate(0.8turn);
+}
